auto publishing updates to notebooks

--- a/hopenhayn.ipynb
+++ b/hopenhayn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1c525795",
+   "id": "af15e623",
    "metadata": {},
    "source": [
     "# The Hopenhayn Entry-Exit Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67faafba",
+   "id": "348750de",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70938ac0",
+   "id": "fc382126",
    "metadata": {},
    "source": [
     "## Outline\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a3a90a1",
+   "id": "19f836c3",
    "metadata": {
     "hide-output": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d06aa82",
+   "id": "119ad1ce",
    "metadata": {},
    "source": [
     "We will use the following imports."
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1693711d",
+   "id": "f13decfd",
    "metadata": {
     "hide-output": false
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa647a38",
+   "id": "8bdb6f53",
    "metadata": {},
    "source": [
     "## The Model"
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cbbd0f6",
+   "id": "2bb4c5fc",
    "metadata": {},
    "source": [
     "### Environment\n",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8a97c6b",
+   "id": "2cb29b2e",
    "metadata": {},
    "source": [
     "### Firm decisions\n",
@@ -175,7 +175,7 @@
     "The firm makes their stop-continue choice by first solving for the value function, which is the unique solution in a class of continuous functions $ \\mathscr C $ (details omitted) to\n",
     "\n",
     "\n",
-    "<a id='equation-36284c86-20eb-4037-b98c-2a27c80974b7'></a>\n",
+    "<a id='equation-99108008-57ea-4b8c-841e-32e8d65268f6'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    v(\\varphi, p) = \\pi(\\varphi, p) + \\beta \n",
@@ -188,7 +188,7 @@
     "Given $ \\bar v $, we let $ \\bar \\varphi $ be the exit threshold function defined by\n",
     "\n",
     "\n",
-    "<a id='equation-79f869f1-9fbe-446b-8843-972f0760d4d4'></a>\n",
+    "<a id='equation-d2287ff5-9c46-4580-920c-09a61985c8e5'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\bar \\varphi(p) := \n",
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a03db83e",
+   "id": "268f508a",
    "metadata": {},
    "source": [
     "### Equilibrium\n",
@@ -242,7 +242,7 @@
     "distribution of firms over productivity levels, such that the goods market clears, or\n",
     "\n",
     "\n",
-    "<a id='equation-f2c7964b-8e89-445c-b4e6-138b8ff78cd5'></a>\n",
+    "<a id='equation-f1a62aa8-25c3-4b86-a0ba-d07fbb35947b'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int q( \\varphi, p) \\mu(d \\varphi) = D(p),\n",
@@ -252,7 +252,7 @@
     "the *invariance condition* over the firm distribution\n",
     "\n",
     "\n",
-    "<a id='equation-3a8e1651-43fd-45bd-89fd-302af3ec87bc'></a>\n",
+    "<a id='equation-2fb35dd4-b6e9-4d5e-9e1a-e3932fba8d76'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -266,7 +266,7 @@
     "holds (see below for intuition), the *equilibrium entry condition*\n",
     "\n",
     "\n",
-    "<a id='equation-d53722df-66d4-489b-92eb-f6c2267fdb63'></a>\n",
+    "<a id='equation-df087544-09be-4e17-8486-27bd70e1e647'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int \\bar v( \\varphi, p) \\, \\gamma(d \\varphi) = c_e\n",
@@ -276,7 +276,7 @@
     "holds, and the *balanced entry and exit condition*\n",
     "\n",
     "\n",
-    "<a id='equation-0b60bf97-bf8e-4e33-bde0-7022d6a81ed4'></a>\n",
+    "<a id='equation-62ee3e3b-3fca-4d76-b90b-0cc9ade43344'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    M = \\mu \\{ \\varphi < \\bar \\varphi(p) \\}\n",
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3c168b1",
+   "id": "87526daf",
    "metadata": {},
    "source": [
     "### Computing equilibrium\n",
@@ -301,7 +301,7 @@
     "exit into the time invariance condition, yielding\n",
     "\n",
     "\n",
-    "<a id='equation-0970403a-9c7b-444d-9372-e138ebfee244'></a>\n",
+    "<a id='equation-4475e3b7-b1da-4a56-b799-6665894cdc82'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -313,7 +313,7 @@
     "where $ \\Pi $ is the transition kernel on $ \\mathbb R_+ $ defined by\n",
     "\n",
     "\n",
-    "<a id='equation-5bef1834-bc19-45b8-a4a6-8d002b68e4cd'></a>\n",
+    "<a id='equation-42e96999-e684-4b55-8b91-ce06ed81b2cb'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\Pi(\\varphi, B) \n",
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58d3dd95",
+   "id": "a703c580",
    "metadata": {},
    "source": [
     "### Specification of dynamics\n",
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "472c7cca",
+   "id": "84d9252b",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d941fd70",
+   "id": "6c2f54b7",
    "metadata": {
     "hide-output": false
    },
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0310549",
+   "id": "789cb680",
    "metadata": {},
    "source": [
     "We store the parameters, grids and Monte Carlo draws in a `namedtuple`."
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69f1dcb5",
+   "id": "fbe85991",
    "metadata": {
     "hide-output": false
    },
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d9a6478",
+   "id": "02cb26fb",
    "metadata": {
     "hide-output": false
    },
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f40a9e49",
+   "id": "686351e0",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69273118",
+   "id": "2afecf7a",
    "metadata": {
     "hide-output": false
    },
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "258e2756",
+   "id": "4d3d299e",
    "metadata": {},
    "source": [
     "Let us write down functions for profits and output."
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24629a0a",
+   "id": "1facb960",
    "metadata": {
     "hide-output": false
    },
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27a5d61e",
+   "id": "6d0ee1ac",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d19ba9b",
+   "id": "5c25ff31",
    "metadata": {},
    "source": [
     "Let’s write code to simulate a cross-section of firms given a particular value for the exit threshold (rather than an exit threshold function).\n",
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a37c290a",
+   "id": "8ba83359",
    "metadata": {
     "hide-output": false
    },
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f8677fd",
+   "id": "722f24f5",
    "metadata": {
     "hide-output": false
    },
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b8258fc",
+   "id": "812e40a1",
    "metadata": {},
    "source": [
     "Our next function runs the cross-section forward in time `sim_length` periods."
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7b299c8",
+   "id": "778f346d",
    "metadata": {
     "hide-output": false
    },
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23056b2a",
+   "id": "74b0f423",
    "metadata": {},
    "source": [
     "Here’s a utility function to compute the expected value\n",
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40703476",
+   "id": "5d9aabdb",
    "metadata": {
     "hide-output": false
    },
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea8a7cb6",
+   "id": "1e373dca",
    "metadata": {},
    "source": [
     "Now let’s vectorize this function in $ \\varphi $ and then write another function that computes the expected value across all $ \\varphi $ in `φ_grid`"
@@ -668,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "536fc37e",
+   "id": "776df861",
    "metadata": {
     "hide-output": false
    },
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b627f2a3",
+   "id": "b120a4de",
    "metadata": {
     "hide-output": false
    },
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1475eedb",
+   "id": "afebd8de",
    "metadata": {},
    "source": [
     "Here is the Bellman operator $ T $."
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f6b6565",
+   "id": "37ba0d2d",
    "metadata": {
     "hide-output": false
    },
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c562e1b1",
+   "id": "cb40a344",
    "metadata": {},
    "source": [
     "The next function takes $ v, p $ as inputs and, conditional on the value function\n",
@@ -739,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "baccd745",
+   "id": "f03f7fe9",
    "metadata": {
     "hide-output": false
    },
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4808346",
+   "id": "e54b41b5",
    "metadata": {},
    "source": [
     "We use value function iteration (VFI) to compute the value function $ \\bar v(\\cdot, p) $, taking $ p $ as given.\n",
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4713581f",
+   "id": "ac8e12ee",
    "metadata": {
     "hide-output": false
    },
@@ -804,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29f56d79",
+   "id": "f53b8bc0",
    "metadata": {
     "hide-output": false
    },
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8703ba5",
+   "id": "e73054cf",
    "metadata": {},
    "source": [
     "We need to solve for the equilibrium price, which is the $ p $ satisfying\n",
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9655630b",
+   "id": "64004f8f",
    "metadata": {
     "hide-output": false
    },
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e501b311",
+   "id": "27a11149",
    "metadata": {},
    "source": [
     "We are now ready to compute all elements of the stationary recursive equilibrium."
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "172100ab",
+   "id": "7434d0e3",
    "metadata": {
     "hide-output": false
    },
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53b5b86e",
+   "id": "0227da0b",
    "metadata": {},
    "source": [
     "## Solving the model"
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63ac511a",
+   "id": "b327b7fc",
    "metadata": {},
    "source": [
     "### Preliminary calculations\n",
@@ -949,7 +949,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f296fe97",
+   "id": "94ac7351",
    "metadata": {
     "hide-output": false
    },
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71e3cd54",
+   "id": "583da103",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to compute the value function at a given price\n",
@@ -971,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd8eb009",
+   "id": "f63ac212",
    "metadata": {
     "hide-output": false
    },
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16872b95",
+   "id": "a61ba5ca",
    "metadata": {},
    "source": [
     "Let’s run the code again to eliminate compile time."
@@ -993,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "696c5674",
+   "id": "a789cfe6",
    "metadata": {
     "hide-output": false
    },
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d8ba7e0",
+   "id": "83d7ded3",
    "metadata": {},
    "source": [
     "Let’s have a look at the net entry value as a function of price\n",
@@ -1015,7 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b355a35f",
+   "id": "c9ad822b",
    "metadata": {
     "hide-output": false
    },
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7822d42",
+   "id": "1286780c",
    "metadata": {},
    "source": [
     "Below we solve for the zero of this function to calculate $ p* $.\n",
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbbe0cca",
+   "id": "aed792ab",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1060,7 +1060,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0714f950",
+   "id": "5d7c528d",
    "metadata": {
     "hide-output": false
    },
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8170c805",
+   "id": "754cecf3",
    "metadata": {},
    "source": [
     "Let’s run the code again to get rid of compile time."
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18e72307",
+   "id": "9bb8cc15",
    "metadata": {
     "hide-output": false
    },
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0e7b6cd",
+   "id": "52b5c2d9",
    "metadata": {},
    "source": [
     "Let’s check that $ p^* $ is close to 1.5"
@@ -1104,7 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dad68ded",
+   "id": "3634f6d2",
    "metadata": {
     "hide-output": false
    },
@@ -1115,7 +1115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "885f4082",
+   "id": "bafac20f",
    "metadata": {},
    "source": [
     "Here is a plot of the value function $ \\bar v(\\cdot, p^*) $."
@@ -1124,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9260b775",
+   "id": "9c7361e7",
    "metadata": {
     "hide-output": false
    },
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82a7b855",
+   "id": "b772d945",
    "metadata": {},
    "source": [
     "Let’s have a look at the firm size distribution, with firm size measured by output."
@@ -1149,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb516bba",
+   "id": "f227b869",
    "metadata": {
     "hide-output": false
    },
@@ -1161,7 +1161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bf6f1ff",
+   "id": "c18da966",
    "metadata": {
     "hide-output": false
    },
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55996cee",
+   "id": "3ec5dcac",
    "metadata": {},
    "source": [
     "## Pareto tails\n",
@@ -1229,7 +1229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29ca8a54",
+   "id": "d037f434",
    "metadata": {
     "hide-output": false
    },
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4322842a",
+   "id": "ef9dc202",
    "metadata": {},
    "source": [
     "Let’s plot the empirical counter CDF of the output distribution."
@@ -1255,7 +1255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8ef9ed7",
+   "id": "9d31d9df",
    "metadata": {
     "hide-output": false
    },
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5629029",
+   "id": "88f85505",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7d649f2",
+   "id": "03307ace",
    "metadata": {},
    "source": [
     "## Exercise 19.1\n",
@@ -1299,7 +1299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e4eea24",
+   "id": "3feb8cae",
    "metadata": {
     "hide-output": false
    },
@@ -1316,7 +1316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0321022e",
+   "id": "f814cdf4",
    "metadata": {},
    "source": [
     "This plot is not linear — as expected, since we are using a folded normal distribution."
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5d8c5a0",
+   "id": "ab1a85ef",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.1](https://jax.quantecon.org/#hopen_ex1)"
@@ -1333,7 +1333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "891e30cc",
+   "id": "0224a020",
    "metadata": {
     "hide-output": false
    },
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9baf3392",
+   "id": "0363a59c",
    "metadata": {},
    "source": [
     "This looks very linear — the model generates Pareto tails.\n",
@@ -1359,7 +1359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d65322f4",
+   "id": "06edb148",
    "metadata": {},
    "source": [
     "## Exercise 19.2\n",
@@ -1374,7 +1374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "778c5ef3",
+   "id": "a674c730",
    "metadata": {
     "hide-output": false
    },
@@ -1385,7 +1385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eec7bae4",
+   "id": "678db141",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.2](https://jax.quantecon.org/#hopen_ex2)"
@@ -1394,7 +1394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c360a07d",
+   "id": "e67ded6d",
    "metadata": {
     "hide-output": false
    },
@@ -1418,7 +1418,7 @@
   }
  ],
  "metadata": {
-  "date": 1741992966.8806398,
+  "date": 1745973983.142015,
   "filename": "hopenhayn.md",
   "kernelspec": {
    "display_name": "Python",
