--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1c8d93d5",
+   "id": "02e867e9",
    "metadata": {},
    "source": [
     "# Quantitative Economics with JAX\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54ac664b",
+   "id": "cf1ebfa7",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa415570",
+   "id": "d6acd7ff",
    "metadata": {},
    "source": [
     "# Simulation\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17fa0898",
+   "id": "dfe12031",
    "metadata": {},
    "source": [
     "# Asset Pricing\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58651e11",
+   "id": "53a9a085",
    "metadata": {},
    "source": [
     "# Dynamic Programming\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "146fb442",
+   "id": "96bcb2c5",
    "metadata": {},
    "source": [
     "# Macroeconomic Models\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9668950",
+   "id": "e76fe657",
    "metadata": {},
    "source": [
     "# Data and Empirics\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45abc368",
+   "id": "67adcdd7",
    "metadata": {},
    "source": [
     "# Other\n",
@@ -102,7 +102,7 @@
   }
  ],
  "metadata": {
-  "date": 1741992966.92467,
+  "date": 1745973983.1911864,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
