--- a/inventory_dynamics.ipynb
+++ b/inventory_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d1c9c3d1",
+   "id": "785d3838",
    "metadata": {},
    "source": [
     "# Inventory Dynamics"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5b3a566",
+   "id": "0b78db30",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5c8eabd",
+   "id": "72076f8b",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f64b7d8d",
+   "id": "bf27a4f1",
    "metadata": {
     "hide-output": false
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bc62aa3",
+   "id": "776db177",
    "metadata": {},
    "source": [
     "Here’s a description of our GPU:"
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61adea9f",
+   "id": "2a376457",
    "metadata": {
     "hide-output": false
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba23ceb9",
+   "id": "e2b02229",
    "metadata": {},
    "source": [
     "## Sample paths\n",
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f770e056",
+   "id": "075aeffa",
    "metadata": {
     "hide-output": false
    },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc6e9b98",
+   "id": "e3b977d6",
    "metadata": {},
    "source": [
     "## Cross-sectional distributions\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b8632a4",
+   "id": "501029c4",
    "metadata": {
     "hide-output": false
    },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70803c9f",
+   "id": "13189b16",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbf46e70",
+   "id": "269c5807",
    "metadata": {
     "hide-output": false
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd3e96aa",
+   "id": "03c08078",
    "metadata": {},
    "source": [
     "We’ll use the following specification"
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "611808d2",
+   "id": "7d4793e0",
    "metadata": {
     "hide-output": false
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df32969a",
+   "id": "b225f528",
    "metadata": {},
    "source": [
     "Let’s look at the timing."
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6713e45",
+   "id": "1d31d213",
    "metadata": {
     "hide-output": false
    },
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d069fc6",
+   "id": "8dd9d600",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03011771",
+   "id": "2add580f",
    "metadata": {
     "hide-output": false
    },
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98f5602c",
+   "id": "ea41b125",
    "metadata": {},
    "source": [
     "Here’s a histogram of inventory levels at time $ T $."
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "439fc088",
+   "id": "26677187",
    "metadata": {
     "hide-output": false
    },
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb2edf54",
+   "id": "1873b4c2",
    "metadata": {},
    "source": [
     "### Compiling the outer loop\n",
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e344efb1",
+   "id": "0d64152d",
    "metadata": {
     "hide-output": false
    },
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f6b7ec5",
+   "id": "9fa715e0",
    "metadata": {},
    "source": [
     "Let’s see how fast this runs with compile time."
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6eff326",
+   "id": "326a1e14",
    "metadata": {
     "hide-output": false
    },
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c8f3bd1",
+   "id": "ac4c4913",
    "metadata": {},
    "source": [
     "And let’s see how fast it runs without compile time."
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f825534f",
+   "id": "0e442128",
    "metadata": {
     "hide-output": false
    },
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e926d3cd",
+   "id": "4388690f",
    "metadata": {},
    "source": [
     "Compared to the original version with a pure Python outer loop, we have\n",
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab93ad4e",
+   "id": "04faa112",
    "metadata": {},
    "source": [
     "### Further vectorization\n",
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1d89426",
+   "id": "20505b73",
    "metadata": {
     "hide-output": false
    },
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96c31468",
+   "id": "5d3ff4d8",
    "metadata": {},
    "source": [
     "Let’s test it with compile time included."
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "382ac010",
+   "id": "897ce0e1",
    "metadata": {
     "hide-output": false
    },
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa5c94d5",
+   "id": "b337346b",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da89bc55",
+   "id": "f21e6d4e",
    "metadata": {
     "hide-output": false
    },
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb8eba6f",
+   "id": "6d85b494",
    "metadata": {},
    "source": [
     "On one hand, this version is faster than the previous one, where random variables were\n",
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59b4763f",
+   "id": "afa8b7d9",
    "metadata": {},
    "source": [
     "## Distribution dynamics\n",
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45b8361d",
+   "id": "3c868b54",
    "metadata": {
     "hide-output": false
    },
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2f373b2",
+   "id": "6d7ee0af",
    "metadata": {},
    "source": [
     "Let’s test it"
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f2e6b8e",
+   "id": "21ed270a",
    "metadata": {
     "hide-output": false
    },
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a43d1058",
+   "id": "070fe957",
    "metadata": {},
    "source": [
     "We run the code again to eliminate compile time."
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df985ea1",
+   "id": "367884dc",
    "metadata": {
     "hide-output": false
    },
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "029d7972",
+   "id": "05a33362",
    "metadata": {},
    "source": [
     "Let’s plot the output."
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b809bba0",
+   "id": "0908b57a",
    "metadata": {
     "hide-output": false
    },
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4b246cd",
+   "id": "66ff2f74",
    "metadata": {},
    "source": [
     "This model for inventory dynamics is asymptotically stationary, with a unique\n",
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7a24d10",
+   "id": "db882309",
    "metadata": {},
    "source": [
     "## Restock frequency\n",
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a15804df",
+   "id": "f32c040b",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -717,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "235ae215",
+   "id": "5a386432",
    "metadata": {
     "hide-output": false
    },
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ebcb412",
+   "id": "ff6d9053",
    "metadata": {
     "hide-output": false
    },
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c52a5637",
+   "id": "c526adf6",
    "metadata": {},
    "source": [
     "We run the code again to get rid of compile time."
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c0c76c7",
+   "id": "1d601a34",
    "metadata": {
     "hide-output": false
    },
@@ -793,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb72b835",
+   "id": "78cbc9ff",
    "metadata": {
     "hide-output": false
    },
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b70f301d",
+   "id": "65719266",
    "metadata": {},
    "source": [
     "### Exercise 5.1\n",
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d0ccbed",
+   "id": "989a61bc",
    "metadata": {},
    "source": [
     "### Solution to[ Exercise 5.1](https://jax.quantecon.org/#inventory_dynamics_ex1)\n",
@@ -826,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "644b708b",
+   "id": "2e3dd368",
    "metadata": {
     "hide-output": false
    },
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "417575b1",
+   "id": "e05f57bd",
    "metadata": {},
    "source": [
     "Note the time the routine takes to run, as well as the output"
@@ -879,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fcf64de",
+   "id": "972196e5",
    "metadata": {
     "hide-output": false
    },
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1068ab33",
+   "id": "a38963f0",
    "metadata": {},
    "source": [
     "We run the code again to eliminate the compile time."
@@ -899,7 +899,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e082f3bf",
+   "id": "48cd3665",
    "metadata": {
     "hide-output": false
    },
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b37ec89",
+   "id": "0809b4b7",
    "metadata": {
     "hide-output": false
    },
@@ -922,7 +922,7 @@
   }
  ],
  "metadata": {
-  "date": 1741992966.952082,
+  "date": 1745973983.2217975,
   "filename": "inventory_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
