--- a/lucas_model.ipynb
+++ b/lucas_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b645346b",
+   "id": "757fa287",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "692680b5",
+   "id": "c5b7d558",
    "metadata": {},
    "source": [
     "# Asset Pricing: The Lucas Asset Pricing Model"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d958d422",
+   "id": "bb658e23",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef374109",
+   "id": "f648d68a",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cc4a0a4",
+   "id": "34f5db6c",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6c1d7c3",
+   "id": "fc13fa50",
    "metadata": {},
    "source": [
     "## The Lucas Model\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5556fae2",
+   "id": "6bc4a177",
    "metadata": {},
    "source": [
     "### Basic Setup\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "806f3845",
+   "id": "8990bbc6",
    "metadata": {},
    "source": [
     "#### Assets\n",
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bb7dfe8",
+   "id": "f910ec72",
    "metadata": {},
    "source": [
     "#### Consumers\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32e2912c",
+   "id": "40a60cca",
    "metadata": {},
    "source": [
     "### Pricing a Lucas Tree\n",
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c954238c",
+   "id": "941f6a27",
    "metadata": {},
    "source": [
     "#### The Dynamic Program\n",
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f4b4b00",
+   "id": "7f52baa6",
    "metadata": {},
    "source": [
     "#### Next Steps\n",
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4b3c29e",
+   "id": "0bd04a85",
    "metadata": {},
    "source": [
     "#### Equilibrium Constraints\n",
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6060f148",
+   "id": "41d90c5e",
    "metadata": {},
    "source": [
     "#### The Equilibrium Price Function\n",
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00ef5eeb",
+   "id": "ea07e8e9",
    "metadata": {},
    "source": [
     "### Solving the Model\n",
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25e4abed",
+   "id": "682d57fd",
    "metadata": {},
    "source": [
     "#### Setting up the Problem\n",
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34c96051",
+   "id": "066fded9",
    "metadata": {},
    "source": [
     "#### A Little Fixed Point Theory\n",
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d12a68d0",
+   "id": "d745bf4d",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7aabba7",
+   "id": "aa2e72f4",
    "metadata": {},
    "source": [
     "### Numba Code\n",
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8e0f6bf",
+   "id": "062f703c",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbf878b9",
+   "id": "399e55e2",
    "metadata": {},
    "source": [
     "Here’s a Numba-jitted version of the Lucas operator"
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29e7ede0",
+   "id": "39b5891f",
    "metadata": {
     "hide-output": false
    },
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa333d8e",
+   "id": "56ab8e21",
    "metadata": {},
    "source": [
     "To solve the model, we write a function that iterates using the Lucas operator\n",
@@ -603,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd23143f",
+   "id": "a9e088d3",
    "metadata": {
     "hide-output": false
    },
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2f154d3",
+   "id": "6db63f98",
    "metadata": {},
    "source": [
     "Let’s solve the model and plot the resulting price function"
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0feea96a",
+   "id": "087b515b",
    "metadata": {
     "hide-output": false
    },
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52884645",
+   "id": "94abe2ce",
    "metadata": {
     "hide-output": false
    },
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6699376",
+   "id": "0b5d0e15",
    "metadata": {
     "hide-output": false
    },
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33c3cb5d",
+   "id": "afe7636d",
    "metadata": {},
    "source": [
     "We see that the price is increasing, even if we remove all serial correlation\n",
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b2ffbdd",
+   "id": "d7643f22",
    "metadata": {},
    "source": [
     "### JAX Code\n",
@@ -717,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9bc5d0d",
+   "id": "f639164c",
    "metadata": {
     "hide-output": false
    },
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cbf722a",
+   "id": "3e25e1a8",
    "metadata": {},
    "source": [
     "We’ll use the following function to simultaneously compute the expectation\n",
@@ -764,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aad464e3",
+   "id": "3e87830c",
    "metadata": {
     "hide-output": false
    },
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b73acabd",
+   "id": "a93fa963",
    "metadata": {},
    "source": [
     "Here’s the Lucas operator"
@@ -790,7 +790,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bc2cdca",
+   "id": "8ad4f613",
    "metadata": {
     "hide-output": false
    },
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68668da1",
+   "id": "fc610819",
    "metadata": {},
    "source": [
     "We’ll use successive approximation to compute the fixed point."
@@ -819,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b154653",
+   "id": "87974eb4",
    "metadata": {
     "hide-output": false
    },
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35f5d2c9",
+   "id": "7ba2ab4b",
    "metadata": {},
    "source": [
     "Here’s a function that solves the model"
@@ -858,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6957c184",
+   "id": "dde6e586",
    "metadata": {
     "hide-output": false
    },
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7916744e",
+   "id": "1da61c01",
    "metadata": {},
    "source": [
     "Now let’s solve the model again and compare timing"
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8610016",
+   "id": "4499e977",
    "metadata": {
     "hide-output": false
    },
@@ -913,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58d71727",
+   "id": "ac6c61bc",
    "metadata": {
     "hide-output": false
    },
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9421bdc6",
+   "id": "a629b874",
    "metadata": {},
    "source": [
     "Let’s check the solutions are similar"
@@ -938,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ba46d5c",
+   "id": "3d1b0847",
    "metadata": {
     "hide-output": false
    },
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e6ffe9d",
+   "id": "2261b3f5",
    "metadata": {},
    "source": [
     "## Exercises\n",
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a468e406",
+   "id": "c2aac93c",
    "metadata": {},
    "source": [
     "## Exercise 8.1\n",
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c31c35a",
+   "id": "79a0f314",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 8.1](https://jax.quantecon.org/#lucas_ex1)"
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "563ab87d",
+   "id": "9b97b7a2",
    "metadata": {
     "hide-output": false
    },
@@ -1009,7 +1009,7 @@
   }
  ],
  "metadata": {
-  "date": 1741992967.2964258,
+  "date": 1745973983.599227,
   "filename": "lucas_model.md",
   "kernelspec": {
    "display_name": "Python",
