--- a/opt_invest.ipynb
+++ b/opt_invest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0f6d9704",
+   "id": "012f8adc",
    "metadata": {},
    "source": [
     "# Optimal Investment"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7db94a89",
+   "id": "9e6c22b9",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cbea159",
+   "id": "3acaea5e",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c690f3d0",
+   "id": "6dcace5b",
    "metadata": {},
    "source": [
     "We study a monopolist who faces inverse demand curve\n",
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60482577",
+   "id": "057d1455",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88d51052",
+   "id": "06fecd29",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fea31d3b",
+   "id": "472bf6e8",
    "metadata": {
     "hide-output": false
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "340e4ea4",
+   "id": "0c1dfe98",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccb9586a",
+   "id": "436e910b",
    "metadata": {
     "hide-output": false
    },
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "723fc19d",
+   "id": "d6f18d7a",
    "metadata": {},
    "source": [
     "Let’s define a function to create an investment model using the given parameters."
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c6723b2",
+   "id": "586be935",
    "metadata": {
     "hide-output": false
    },
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "054891fe",
+   "id": "9c159b78",
    "metadata": {},
    "source": [
     "Let’s re-write the vectorized version of the right-hand side of the\n",
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c8824f7",
+   "id": "a326dc14",
    "metadata": {
     "hide-output": false
    },
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24f9ec6a",
+   "id": "d8fbbf71",
    "metadata": {},
    "source": [
     "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15e8183d",
+   "id": "21f07efe",
    "metadata": {
     "hide-output": false
    },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15640f36",
+   "id": "1964f3d7",
    "metadata": {},
    "source": [
     "Define the Bellman operator."
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b93ce3e",
+   "id": "c030bacd",
    "metadata": {
     "hide-output": false
    },
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06aa36c7",
+   "id": "f26d7537",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dc84206",
+   "id": "1c066bd1",
    "metadata": {
     "hide-output": false
    },
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "356ab11d",
+   "id": "f370fc7b",
    "metadata": {},
    "source": [
     "Define the $ \\sigma $-policy operator."
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87a3451b",
+   "id": "efef7131",
    "metadata": {
     "hide-output": false
    },
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34ecda89",
+   "id": "849dc449",
    "metadata": {},
    "source": [
     "Next, we want to computes the lifetime value of following policy $ \\sigma $.\n",
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "001ba371",
+   "id": "befde4e7",
    "metadata": {
     "hide-output": false
    },
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09322a6d",
+   "id": "344cb0b4",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b47eaf2",
+   "id": "9cf38ffe",
    "metadata": {
     "hide-output": false
    },
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f86b8e84",
+   "id": "6d0d0988",
    "metadata": {},
    "source": [
     "We use successive approximation for VFI."
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbab7186",
+   "id": "30acdda3",
    "metadata": {
     "hide-output": false
    },
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69af746e",
+   "id": "cd1d2fb7",
    "metadata": {},
    "source": [
     "For OPI we’ll add a compiled routine that computes $ T_σ^m v $."
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0407b3c",
+   "id": "ccf85df1",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf3abe5c",
+   "id": "585d74ba",
    "metadata": {},
    "source": [
     "Finally, we introduce the solvers that implement VFI, HPI and OPI."
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7573b974",
+   "id": "5dddfb2b",
    "metadata": {
     "hide-output": false
    },
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8da13962",
+   "id": "51293c44",
    "metadata": {},
    "source": [
     "For OPI we will use a compiled JAX `lax.while_loop` operation to speed execution."
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6bfdcc9",
+   "id": "b5b6c3a1",
    "metadata": {
     "hide-output": false
    },
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "540e79a5",
+   "id": "bd586cef",
    "metadata": {},
    "source": [
     "Here’s a friendly interface to OPI"
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27d13221",
+   "id": "c13cab35",
    "metadata": {
     "hide-output": false
    },
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c495eee5",
+   "id": "cd765dbd",
    "metadata": {},
    "source": [
     "Here’s HPI"
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adafab0f",
+   "id": "a23e9b1e",
    "metadata": {
     "hide-output": false
    },
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af4c711d",
+   "id": "1d5a48b8",
    "metadata": {
     "hide-output": false
    },
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f5741b3",
+   "id": "48bfb7f0",
    "metadata": {
     "hide-output": false
    },
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91b87c1d",
+   "id": "6e295f27",
    "metadata": {
     "hide-output": false
    },
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4ac9a39",
+   "id": "0260fcd4",
    "metadata": {},
    "source": [
     "Here’s the plot of the Howard policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "781a4545",
+   "id": "bc7e575f",
    "metadata": {
     "hide-output": false
    },
@@ -746,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f5c1116",
+   "id": "5b462ea2",
    "metadata": {
     "hide-output": false
    },
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "660b5cb1",
+   "id": "5955db1b",
    "metadata": {
     "hide-output": false
    },
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1c30e02",
+   "id": "824ee295",
    "metadata": {},
    "source": [
     "Here’s the plot of the VFI, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f9d8c3f",
+   "id": "5006a41a",
    "metadata": {
     "hide-output": false
    },
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f332aca0",
+   "id": "9dea331a",
    "metadata": {
     "hide-output": false
    },
@@ -814,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c53d64e",
+   "id": "45e926bc",
    "metadata": {
     "hide-output": false
    },
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1ab580b",
+   "id": "b554b46a",
    "metadata": {},
    "source": [
     "Here’s the plot of the optimal policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -839,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a652ad7e",
+   "id": "8edddf70",
    "metadata": {
     "hide-output": false
    },
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64be0f12",
+   "id": "88d37b1d",
    "metadata": {},
    "source": [
     "We observe that all the solvers produce the same output from the above three plots.\n",
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f64be6fd",
+   "id": "44f33d7c",
    "metadata": {
     "hide-output": false
    },
@@ -878,7 +878,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "778aa1ae",
+   "id": "090a2241",
    "metadata": {
     "hide-output": false
    },
@@ -891,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35c70153",
+   "id": "5d15d3e9",
    "metadata": {
     "hide-output": false
    },
@@ -907,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bd3c6e5",
+   "id": "2c93ae04",
    "metadata": {
     "hide-output": false
    },
@@ -920,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e6b2798",
+   "id": "5bcd5b20",
    "metadata": {
     "hide-output": false
    },
@@ -936,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a1a5f2c",
+   "id": "d82ed783",
    "metadata": {
     "hide-output": false
    },
@@ -958,7 +958,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4b13428",
+   "id": "edb4fa4a",
    "metadata": {
     "hide-output": false
    },
@@ -978,7 +978,7 @@
   }
  ],
  "metadata": {
-  "date": 1741992967.434304,
+  "date": 1745973983.7523203,
   "filename": "opt_invest.md",
   "kernelspec": {
    "display_name": "Python",
