--- a/overborrowing.ipynb
+++ b/overborrowing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f9caa859",
+   "id": "4870d4fc",
    "metadata": {},
    "source": [
     "# Bianchi Overborrowing Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "673287e0",
+   "id": "b53d4c14",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90a607c6",
+   "id": "f0b85f22",
    "metadata": {
     "hide-output": false
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdad569b",
+   "id": "1a86bcad",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2ed6a1b",
+   "id": "8ae5b69d",
    "metadata": {
     "hide-output": false
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "802b6bcb",
+   "id": "ab35552f",
    "metadata": {},
    "source": [
     "## Markov dynamics\n",
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f71a3518",
+   "id": "c94b7f51",
    "metadata": {
     "hide-output": false
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68e58485",
+   "id": "45c92e4c",
    "metadata": {},
    "source": [
     "We’ll store the data in $ \\Omega $ using its square root:"
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a60faf5",
+   "id": "06487262",
    "metadata": {
     "hide-output": false
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0592bfea",
+   "id": "f861ff51",
    "metadata": {},
    "source": [
     "### Simulating the VAR\n",
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beddeb7e",
+   "id": "ad4063d2",
    "metadata": {
     "hide-output": false
    },
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e345a368",
+   "id": "ff720949",
    "metadata": {},
    "source": [
     "### Discretizing the VAR\n",
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e87a13f9",
+   "id": "0db6e41e",
    "metadata": {
     "hide-output": false
    },
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a59e51d3",
+   "id": "029a8618",
    "metadata": {},
    "source": [
     "Here’s code for sampling from the Markov chain."
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "664eb73c",
+   "id": "8f4091c0",
    "metadata": {
     "hide-output": false
    },
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb1fb412",
+   "id": "ed2d5a1f",
    "metadata": {},
    "source": [
     "### Testing the discretization\n",
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a63405c8",
+   "id": "f7b19e04",
    "metadata": {
     "hide-output": false
    },
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f84a3c5f",
+   "id": "ce403d5c",
    "metadata": {
     "hide-output": false
    },
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21aebd40",
+   "id": "8ed6b106",
    "metadata": {
     "hide-output": false
    },
@@ -321,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fba1750",
+   "id": "8d84066d",
    "metadata": {
     "hide-output": false
    },
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bae2025",
+   "id": "a73a352c",
    "metadata": {},
    "source": [
     "## Description of the model\n",
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b325c88",
+   "id": "1f46b4da",
    "metadata": {},
    "source": [
     "### Decentralized equilibrium\n",
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc6f7337",
+   "id": "b6d84de7",
    "metadata": {},
    "source": [
     "### Notation\n",
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ae06020",
+   "id": "df945a7f",
    "metadata": {},
    "source": [
     "## Overborrowing model in Python / JAX\n",
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85bea31d",
+   "id": "acb7305c",
    "metadata": {
     "hide-output": false
    },
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "692724d8",
+   "id": "f311f86c",
    "metadata": {
     "hide-output": false
    },
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34fa116e",
+   "id": "4e23bb5e",
    "metadata": {},
    "source": [
     "Default parameter values are from Bianchi.\n",
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23e36a6f",
+   "id": "45e62a9a",
    "metadata": {
     "hide-output": false
    },
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f7a6ad4",
+   "id": "b2027c05",
    "metadata": {},
    "source": [
     "We need code to generate an initial guess of $ H $."
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "883e965a",
+   "id": "70ea1c89",
    "metadata": {
     "hide-output": false
    },
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7bfc77c",
+   "id": "c89177af",
    "metadata": {},
    "source": [
     "We need to construct the Bellman operator for the household.\n",
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a220bbf5",
+   "id": "f60dc86e",
    "metadata": {
     "hide-output": false
    },
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3616543a",
+   "id": "61316183",
    "metadata": {},
    "source": [
     "Let’s now vectorize and jit-compile this map."
@@ -720,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c5a4f59",
+   "id": "798b5265",
    "metadata": {
     "hide-output": false
    },
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "832e4ba9",
+   "id": "6f9a3439",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "680a7362",
+   "id": "12ad58d0",
    "metadata": {
     "hide-output": false
    },
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad0428a3",
+   "id": "6ecbba51",
    "metadata": {},
    "source": [
     "Here’s the policy operator"
@@ -788,7 +788,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ad503bd",
+   "id": "e4858cb4",
    "metadata": {
     "hide-output": false
    },
@@ -823,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70ffd957",
+   "id": "bcd6348b",
    "metadata": {
     "hide-output": false
    },
@@ -843,7 +843,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c93261a6",
+   "id": "ef641902",
    "metadata": {
     "hide-output": false
    },
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b25b70e2",
+   "id": "42e682db",
    "metadata": {
     "hide-output": false
    },
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb27d815",
+   "id": "99bf86c9",
    "metadata": {},
    "source": [
     "This is how we update our guess of $ H $, using the current policy $ b' $\n",
@@ -894,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7d739a9",
+   "id": "af0ee67b",
    "metadata": {
     "hide-output": false
    },
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92397f74",
+   "id": "ab824115",
    "metadata": {},
    "source": [
     "Now we can write code to compute an equilibrium law of motion $ H $."
@@ -931,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85d160f2",
+   "id": "e8a35812",
    "metadata": {
     "hide-output": false
    },
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc12ff39",
+   "id": "4ae8f48b",
    "metadata": {},
    "source": [
     "## Planner problem\n",
@@ -1006,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcc265bc",
+   "id": "2998af5e",
    "metadata": {
     "hide-output": false
    },
@@ -1042,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "269f164d",
+   "id": "74bd6706",
    "metadata": {
     "hide-output": false
    },
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a737e65f",
+   "id": "1cbbb9b5",
    "metadata": {},
    "source": [
     "Now we construct the Bellman operator."
@@ -1070,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cf106ff",
+   "id": "a2d6619f",
    "metadata": {
     "hide-output": false
    },
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07449f1d",
+   "id": "2996d888",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -1099,7 +1099,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90d76a36",
+   "id": "47cd19e8",
    "metadata": {
     "hide-output": false
    },
@@ -1120,7 +1120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8ea20d3",
+   "id": "2fb1a2e0",
    "metadata": {
     "hide-output": false
    },
@@ -1152,7 +1152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d41c75e",
+   "id": "0a050de8",
    "metadata": {
     "hide-output": false
    },
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8130a786",
+   "id": "1512e6d7",
    "metadata": {},
    "source": [
     "Computing the planner solution is straightforward value function iteration:"
@@ -1172,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e2ab999",
+   "id": "b76435f9",
    "metadata": {
     "hide-output": false
    },
@@ -1196,7 +1196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6af919db",
+   "id": "37b951fc",
    "metadata": {},
    "source": [
     "## Numerical solution\n",
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c679c7b",
+   "id": "4afc32fe",
    "metadata": {},
    "source": [
     "### Generating solutions\n",
@@ -1217,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1493e123",
+   "id": "f79f901a",
    "metadata": {
     "hide-output": false
    },
@@ -1231,7 +1231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84d5c6f4",
+   "id": "9e64f61a",
    "metadata": {
     "hide-output": false
    },
@@ -1248,7 +1248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "390ece8f",
+   "id": "8d334325",
    "metadata": {
     "hide-output": false
    },
@@ -1264,7 +1264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d081de7",
+   "id": "3d44c51f",
    "metadata": {},
    "source": [
     "### Policy plots\n",
@@ -1275,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aecdecda",
+   "id": "6d091032",
    "metadata": {
     "hide-output": false
    },
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd75fd44",
+   "id": "5778e8e2",
    "metadata": {},
    "source": [
     "The match is not exact because we use a different estimate of the Markov\n",
@@ -1309,7 +1309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "720d35ce",
+   "id": "4fec65a1",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7df2ebe5",
+   "id": "96d99ea5",
    "metadata": {},
    "source": [
     "## Exercise 20.1\n",
@@ -1335,7 +1335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab9ef884",
+   "id": "d11d55c5",
    "metadata": {
     "hide-output": false
    },
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "359325af",
+   "id": "6048a715",
    "metadata": {},
    "source": [
     "Note that you will have to convert JAX arrays into NumPy arrays if you want to use this function.\n",
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca3665b1",
+   "id": "3d456125",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 20.1](https://jax.quantecon.org/#overborrow_1)"
@@ -1389,7 +1389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8e9910b",
+   "id": "b19ca91f",
    "metadata": {
     "hide-output": false
    },
@@ -1401,7 +1401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5538fcf1",
+   "id": "2220f0f2",
    "metadata": {
     "hide-output": false
    },
@@ -1414,7 +1414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d646b637",
+   "id": "98068e78",
    "metadata": {},
    "source": [
     "We convert JAX arrays to NumPy arrays in order to use Numba."
@@ -1423,7 +1423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3133f087",
+   "id": "62112d87",
    "metadata": {
     "hide-output": false
    },
@@ -1435,7 +1435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4e77d50",
+   "id": "c9cb1682",
    "metadata": {},
    "source": [
     "Now let’s compute borrowing for the decentralized equilibrium and the planner."
@@ -1444,7 +1444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88616704",
+   "id": "3d7664a3",
    "metadata": {
     "hide-output": false
    },
@@ -1458,7 +1458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2433d9f5",
+   "id": "14f4bc24",
    "metadata": {},
    "source": [
     "We suppress some annoying warnings produced by the current version of `seaborn`"
@@ -1467,7 +1467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d3cbafc",
+   "id": "547e58a6",
    "metadata": {
     "hide-output": false
    },
@@ -1479,7 +1479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2d3dccc",
+   "id": "f89a02d2",
    "metadata": {},
    "source": [
     "Now let’s plot the distributions using a kernel density estimator."
@@ -1488,7 +1488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3be92172",
+   "id": "d6906bda",
    "metadata": {
     "hide-output": false
    },
@@ -1506,7 +1506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1ad548c",
+   "id": "f9ddedb2",
    "metadata": {},
    "source": [
     "This corresponds to Figure 2 in Bianchi.\n",
@@ -1519,7 +1519,7 @@
   }
  ],
  "metadata": {
-  "date": 1741992967.53851,
+  "date": 1745973983.8679402,
   "filename": "overborrowing.md",
   "kernelspec": {
    "display_name": "Python",
